--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,11 +4,29 @@
     text-align: center;
     align-content: center;
     justify-content: center;
+    transition: all 1s linear;
 }
 .card img{
     width: 100%;
     height: 60%;
 }
+
+.card:hover{
+    transform: scale(2);
+    transform: scale(1.5) matrix3d(1);
+}
+
+@keyframes rotate {
+    0% {
+        
+        transform: rotate(0);
+      }
+     
+      50% {
+        transform: rotate(360deg);
+    }
+
+   } 
 
 .maingrid{
     display: grid;
